# project-atlas

./: AGENTS.md  ARCHITECTURE.md  CONTRIBUTING.md  DESIGN_PRINCIPLES.md  DEVELOPMENT_GUIDE.md  JOBLOG.md  PROJECT_CHARTER.md  README.md  ROADMAP.md  pyproject.toml
atlas/: README.md
docs/: backlog.md  vision.md
docs/adr/: ADR-001-project-vision.md  ADR-002-atlas-vs-existing-research-landscape.md
docs/architecture/: overview.md  pipeline.md  plugins.md
docs/concepts/: business-glossary.md  knowledge-candidate-review.md  knowledge-model.md  metadata.md
docs/poc/: README.md
docs/research/: README.md  reflex.md
examples/turtle/: README.md
templates/: README.md
tests/: README.md
